--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="step">6</div>
         <div class="step">7</div>
       </div>
-      <button class="btn" id="prev disabled"></button>
-      <button class="btn" id="next disabled"></button>
+      <button class="btn" id="prev" disabled>Prev</button>
+      <button class="btn" id="next">Next</button>
     </div>
     
     <script src="script.js"></script>
